--- a/ohmyfood/sass/utils/_mixins.scss
+++ b/ohmyfood/sass/utils/_mixins.scss
@@ -15,6 +15,7 @@
                 font-family: map-get($map: $argument, $key: ft);
                 font-size: map-get($map: $argument, $key: ft-size);
                 background: linear-gradient(90deg, map-get($argument, clr-grad-a), map-get($argument, clr-grad-b));
+                background-clip: text;
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
                 //color: linear-gradient(map-get($map: $argument, $key: clr-grad-a) map-get($map:$argument, $key: clr-grad-b));
@@ -145,6 +146,7 @@
                 font-family: map-get($map: $argument, $key: ft);
                 font-size: $size-ML;
                 background: linear-gradient(90deg, map-get($argument, clr-grad-a), map-get($argument, clr-grad-b));
+                background-clip: text;
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
             }
